# ardalink-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml  release.yml
ardalink_engine/: __init__.py  main.py  requirements.txt  tenancy.py
ardalink_engine/src/: __init__.py  config.py  logging_config.py
ardalink_engine/src/ai/: __init__.py  azure_client.py
ardalink_engine/src/api/: __init__.py  assessment.py  grid_query.py  models.py
ardalink_engine/src/core_math/: __init__.py  energy.py  nutrition.py
ardalink_engine/src/db/: __init__.py  client.py  schema.py  seed.py
ardalink_engine/src/geo/: __init__.py  grid.py  routing.py  wards.py
ardalink_engine/src/pipeline/: __init__.py  gee.py  grid_ingest.py  obstacles.py  satellite.py  scheduler.py  srtm_terrain.py
docs/: 00-EXECUTIVE-INDEX.md  01-ARCHITECTURE.md  02-API.md  03-DEPLOYMENT.md  04-SECURITY.md  05-OBSERVABILITY.md  06-COSTS.md  07-RUNBOOKS.md  08-TEAM.md
docs/archive/: README.md  phase-0.5-backup.md
migrations/: 0001_multitenant.down.sql  0001_multitenant.up.sql  README.md
tests/: conftest.py  test_energy.py  test_main.py  test_tenancy.py  test_wards.py
