[project]
name = "ardalink-engine"
version = "0.2.0"
description = "ArdaLink biophysical engine — satellite ingestion, grid scoring, journey planning."
authors = [{ name = "ArdaLink" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "earthengine-api>=1.7.28",
    "geopandas>=1.1.3",
    "networkx>=3.6.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "httpx>=0.27.0",
]
test = [
    "testcontainers[postgres]>=4.8.0",
]

[project.scripts]
ardalink-engine = "ardalink_engine.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ardalink_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",
    # Legacy code uses semantically-clear class names; N818 deferred.
    "N818",
    # B905 zip-without-strict deferred; pair-iteration loops in legacy code
    # assume equal-length zips.
    "B905",
    # F841 (unused variable) deferred for migration — some legacy locals kept
    # for documentation; cleaned up in follow-up.
    "F841",
    # SIM117 (nested with) deferred.
    "SIM117",
    # N (pep8-naming) deferred — legacy identifiers use mixed conventions.
    "N",
    # C4 (comprehensions), B (bugbear) deferred.
    "C4",
    "B",
]

[tool.mypy]
strict = false
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
# Coverage floor enforcement deferred to Phase 6.
# addopts = "--strict-markers --cov=ardalink_engine --cov-report=term-missing --cov-fail-under=70"
markers = [
    "integration: requires live Postgres",
    "contract: requires running ardalink-api",
]